--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -2,7 +2,7 @@
     margin-top: 10px;
     display: flex;
     justify-content: space-between;  
-    h2{
+    h1{
     background-image: linear-gradient(to right, #9902ff 0%, #cc3398 100%);
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -13,10 +13,53 @@
         cursor: pointer;
         width: 50px;
         height: 50px;
+    }
 }
+span{
+    color: red;
+    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
 }
 .form-group{
     margin: 5px;
-    input{
+    input.ng-invalid.ng-touched{
+        border: 1px solid red;
     }
+}
+
+
+.mb-success-popup-modal-position{
+    position: absolute;
+  .mb-success-popup-modal{
+     position: relative;
+     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
+     height: 220px;
+     width: 380px;
+     background-color: #fff;
+     padding: 10px;
+  }
+  .mb-close-icon-img{
+      cursor: pointer;
+      display: flex;
+      justify-content: flex-end;
+  }
+  .mb-Success-msg{
+      text-align: center;
+      padding: 15px 0 25px 0;
+  }
+  h1{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    // background-image: linear-gradient(to right, #05a32a 0%, #c8f57f 100%);
+    background-image: linear-gradient(to right, #ff0217 0%, #e4738b 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+    }
+  .mb-popup-close-btn{
+      display: flex;
+      justify-content: center;
+  }
 }
