--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,21 +1,33 @@
 <div class="mb-container">
     <div class="mb-wrapper">
-        <div class="mb-title">
+        
+      <form [formGroup]="loginForm" (ngSubmit)="Login()">
+         <div class="mb-title">
             <span>LOGIN</span>
-        </div>
-        <div class="mb-user-pass-section">
-            <span>Email</span> <br>
-            <input type="text">
-        </div>
-        <div class="mb-user-pass-section">
-            <span>Password</span> <br>
-            <input type="text">
-        </div>
-        <div class="mb-login-btn-section space-btwn">
-            <app-button routerLink="/login" [hasColor]="true" [text]="'LOGIN'"></app-button>
+         </div>
+
+         <div class="form-group mb-user-pass-section">
+            <label for="Email" >Email</label>
+            <input class="form-control" type="email"
+            placeholder="" formControlName="Email" id="Email">
+         </div>
+
+         <div class="form-group mb-user-pass-section">
+            <label for="Password">Password</label> 
+            <input class="form-control" type="password"
+            placeholder="" formControlName="Password" id="Password">
+         </div>
+
+               <span *ngIf="!loginForm.valid && loginForm.touched" 
+                   class="help-block m-2"> Please Enter Valid Credential
+                </span>
+
+          <div class="mb-login-btn-section space-btwn">
+            <app-button routerLink="/home" [hasColor]="true" [text]="'LOGIN'" (click)="Login()"></app-button>
             <span>Forogt Password</span>
-        </div>
-                
+          </div>
+       </form>             
+
         <div class="mb-no-account-content">
             <span>Don’t have an account?</span>
         </div>
