--- a/src/app/component/sign-up/sign-up.component.html
+++ b/src/app/component/sign-up/sign-up.component.html
@@ -3,60 +3,63 @@
         <div class="mb-title">
             <span>SIGN-UP</span>
         </div>
-
-      <form [formGroup]="SignupForm" (ngSubmit)="Signup()">
+      <form [formGroup]="SignupForm">
         <div class="form-group mb-user-pass-section">
-            <label>Email</label>
+            <label>Email <span>*</span></label>
             <input type="email" class="form-control"
             placeholder="" formControlName="Email" id="Email">
         </div>
 
        <div class="mb-signup-name space-btwn">
         <div class="form-group mb-user-pass-section">
-            <label for="FirstName">First Name</label>
+            <label for="FirstName">First Name <span>*</span></label>
             <input type="text"class="form-control"
             placeholder="" formControlName="FirstName" id="FirstName">
         </div>
 
         <div class="form-group mb-user-pass-section">
-            <label for="LastName">Last Name</label>
+            <label for="LastName">Last Name <span>*</span></label>
             <input type="text" class="form-control"
             placeholder="" formControlName="LastName" id="LastName">
         </div>
        </div>
 
         <div class="form-group mb-user-pass-section">
-            <label for="Password">Password</label>
+            <label for="Password">Password <span>*</span></label>
             <input type="password" class="form-control"
             placeholder="" formControlName="Password" id="Password">
         </div>
 
         <div class="mb-signup-address space-btwn">
             <div class="form-group mb-user-pass-section">
-                <label for="Address">Address</label>
+                <label for="Address">Address <span>*</span></label>
                 <input type="text" class="form-control"
                 placeholder="" formControlName="Address" id="Address">
             </div>
 
             <div class="form-group mb-user-pass-section">
-                <label for="BirthDate">Birth Date</label>
-                <input type="date" class="form-control"
+                <label for="BirthDate">Birth Date <span>*</span></label>
+                <input type="date" class="form-control" max="2021-06-14"
                 placeholder="" formControlName="BirthDate" id="BirthDate">
             </div>
         </div>
 
         <div class="form-group mb-user-pass-section">
-            <label for="CompanyName">Company Name</label>
+            <label for="CompanyName">Company Name <span>*</span></label>
             <input type="text" class="form-control"
             placeholder="" formControlName="CompanyName" id="CompanyName">
         </div>
         <span *ngIf="!SignupForm.valid && SignupForm.touched" 
-            class="help-block m-2"> Please Enter Valid Data
+            class="help-block m-2"> {{alertforDom}}
         </span> <br>
-        <div class="mb-register-btn-section">
-            <app-button routerLink="/login" [hasColor]="false" [text]="'REGISTER'" (click)="Signup()"></app-button>
+        <div class="mb-register-btn-section d-flex justify-content-between">
+            <button type="button" class="btn btn-outline-secondary" 
+                routerLink="/login">Cancel
+            </button>
+            <app-button [hasColor]="false" [text]="'REGISTER'" 
+                (click)="Signup()">
+            </app-button>
         </div>
      </form>
-
     </div>
 </div>
