--- a/src/app/component/sign-up/sign-up.component.scss
+++ b/src/app/component/sign-up/sign-up.component.scss
@@ -9,6 +9,7 @@
 
 .mb-wrapper{
     border-radius: 20px;
+    height: 100%;
     width: 500px;
     padding: 30px;
     background-color: #fff;
@@ -55,7 +56,7 @@
 
 span{
     color: red;
-    font-size: 15px;
+    font-size: 12px;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
 }
